fix: toc width on mobile

--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -3370,7 +3370,9 @@ button, [role="button"] {
   margin-top: calc(var(--spacing) * 3);
 }
 #TableOfContents {
-  max-width: 25vw;
+  @media (width >= 1024px) {
+    max-width: 25vw;
+  }
 }
 #TOCView {
   max-height: calc(100vh - 150px);
